<resources>
    <string name="app_name">Mailbox App</string>

    <string name="me_name">John Miller</string>
    <string name="me_mail">john.miller@mail.com</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="str_nav_inbox">Inbox</string>
    <string name="str_nav_outbox">Outbox</string>
    <string name="str_nav_people">Peoples</string>
    <string name="str_nav_trash">Trash</string>

    <string name="str_nav_setting">Settings</string>
    <string name="str_nav_help">Help &amp; Feedback</string>
    <!--exit notification-->
    <string name="press_again_exit_app">Press again to exit</string>

</resources>
